--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="calcular">Calcular</string>
     <string name="Borrar">Borrar</string>
     <string name="cajatexto">El importe de su póliza es 40.00 € / mes</string>
+    <string name="cajatexto2">El importe de su póliza es 40.00 € / mes</string>
 </resources>
